<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/termsandaboutuspop"
    tools:context=".termsPop">

    <TextView
        android:id="@+id/termbaslik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termbaslik"
        android:textSize="25dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/segoesemibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoe400"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingRight="25dp"
        android:text="@string/kullanimkosullari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termbaslik"
        app:layout_constraintVertical_bias="0.0" />



    <Button
        android:id="@+id/kullanimkosuluonay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logbutton"
        app:backgroundTint="@color/wblue"
        android:text="@string/continueu"
        android:fontFamily="@font/segoesemibold"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>